TP2/Gramatica.txt
prog : seccoes

seccoes : 
        | seccoes seccao

seccao : LEXSTART lex termino
       | YACCSTART yacc termino

termino : END
        | seccao




lex : lexParametros

lexParametros : 
              | lexParametros lexParametro

lexParametro : lexToken
             | lexRegra

lexToken :  ID context '=' ER tokenFunc changeContext

context : 
        | '(' ID ')'
        | ID

tokenFunc : 
          | FSTR
          | FINT
          | FFLOAT

changeContext : 
              | CHANGECONTEXT ID
              | CHANGECONTEXT '(' ID ')'

lexRegra : lexIgnore
         | lexLiterals
         | lexContexts
         | comError

lexIgnore : LEXIGNORE context '=' STRING

lexLiterals : LEXLITERALS '=' STRING

lexContexts : LEXCONTEXT '=' '[' lexContexTuplos ']'

lexContexTuplos : lexContexTuplo
                | lexContexTuplos ',' lexContexTuplo

lexContexTuplo : '(' ID ',' ID ')'


comError : COMERROR context '=' comErrorMessage skipOps

comErrorMessage : 
                | STRING

skipOps : SKIP
        | NOSKIP




yacc : yaccParametros

yaccParametros : 
               | yaccParametros yaccParametro

yaccParametro : yaccVar
              | yaccRegra
              | yaccProd

yaccRegra : yaccPrecedence
          | comError

yaccPrecedence : YACCPRECEDENCE '=' '(' yaccPreTuplos ')'

yaccPreTuplos : yaccPreTuplo
              | yaccPreTuplos ',' yaccPreTuplo

yaccPreTuplo : '(' STRING ',' STRING yaccPreTuploOP 

yaccPreTuploOP : ')'
               | ',' STRING yaccPreTuploOP

yaccVar : ID '=' VarValue

VarValue : STRING
         | NUMVAL
         | EMPTYLIST
         | EMPTYDIC

yaccProd : ID yaccProdAlias ':' yaccProdValue yaccProdCod

yaccProdAlias : 
              | '(' ID ')'
              | ID

yaccProdValue : 
              | STRING

yaccProdCod :
            | CODIGO
